force-app/main/default/objects/Contract/fields/ContractDeliveryLocale__c.field-meta.xml
<CustomField>
    <fullName>ContractDeliveryLocale__c</fullName>
    <label>Local de Entrega do Contrato</label>
    <type>TextArea</type>
</CustomField>