force-app/main/default/objects/Contract/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Tipo de Contrato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>