force-app/main/default/objects/Contract/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número do Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>