force-app/main/default/objects/Contract/fields/Product_DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>Product_DeliveryDate__c</fullName>
    <label>Data de Entrega do Produto</label>
    <type>Date</type>
</CustomField>